# airline-ai-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  README.md  benchmark_results.json  pyproject.toml  ruff-check.sh
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  flights.py
backend/app/core/: config.py
backend/app/data/: flight_data.py
backend/app/db/: database.py  init_db.py
backend/app/middleware/: __init__.py  logging.py
backend/app/models/: chat.py  flight.py
backend/app/prompts/: system_prompts.py
backend/app/scripts/: auto_ingest.py  benchmark_chatbot.py  check_llm_config.py  ingest_data.py  reset_vector_store.py  test_amadeus.py  test_fallback.py  test_flight_tool.py  test_langsmith.py  test_language_detection.py  test_llm.py  test_memory.py  test_model_pool.py  test_new_policies.py  test_prompts.py  test_rag_quality.py  test_rag_single.py  test_rotation.py
backend/app/services/: amadeus_api.py  chat_service.py  flight_service.py  gemini_service.py  groq_service.py  iata_service.py  language_service.py  llm_base.py  llm_manager.py  llm_service.py  memory_service.py  vector_service.py
backend/app/tools/: __init__.py  flight_tools.py  iata_tools.py
backend/app/utils/: logger.py
backend/data/: flight_data.py
backend/data/policies/: baggage.md  cancellation.md  checkin.md  faq.md  flight_changes.md  flying_returns.md  services.md  special_services.md
backend/scripts/: post-deploy.sh
backend/tests/: __init__.py  conftest.py  test_api.py  test_flight_service.py
backend/tests/integration/: __init__.py  test_language_service.py  test_memory_service.py
backend/tests/manual/: __init__.py  test_amadeus.py  test_chat_service.py  test_flight_tool.py  test_llm.py  test_new_policies.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRE_COMMIT_GUIDE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: chat-input.tsx  chat-interface.tsx  chat-message.tsx  flight-card.tsx  typing-indicator.tsx
frontend/src/lib/: api.ts
