[tool.poetry]
name = "airline-ai-assistant-backend"
version = "0.1.0"
description = "Backend for Airline AI Assistant"
authors = ["AI Champion <engineer@aichampions.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
langchain = ">=0.1.0,<0.2.0"
faiss-cpu = "^1.7.4"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
requests = "^2.31.0"
google-generativeai = ">=0.5.2,<0.6.0"
langchain-google-genai = "==1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
