[tool.poetry]
name = "airline-ai-assistant-backend"
version = "0.1.0"
description = "Backend for Airline AI Assistant"
authors = ["AI Champion <engineer@aichampions.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-google-genai = "^1.0.6"
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
pgvector = "^0.2.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = ">=0.27.0"
requests = "^2.31.0"
google-generativeai = ">=0.5.2,<0.6.0"
langdetect = "^1.0.9"
grpcio = "1.62.1"
protobuf = "4.25.3"
langchain-postgres = "^0.0.16"
asyncpg = "^0.31.0"
sentence-transformers = "^5.2.0"
langchain-huggingface = "^0.0.3"
langchain-groq = ">=0.1.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.15"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
